Fix the scrollbar issue

--- a/sidebar/done_sidebar/style.css
+++ b/sidebar/done_sidebar/style.css
@@ -11,19 +11,21 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 12px;
+    box-sizing: content-box;
 }
 
 /* Track */
-/* ::-webkit-scrollbar-track {
-    /* box-shadow: inset 0 0 5px grey; 
+::-webkit-scrollbar-track {
+    width: 12px;
     border-radius: 10px; 
-} */
+}
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: rgb(153, 153, 153); 
-    border-radius: 12px;
+    /* border-radius: 12px; */
+    border: 3px solid rgb(24, 24, 24);
 }
 
 /* Handle on hover */
